[tool.poetry]
name = "offer"
version = "0.1.0"
description = ""
authors = ["Michel Perez <michel.ingesoft@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.40"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
